package td2.partie1;

public enum ComposantType {
    REPERTOIRE, FICHIER
}
