package td2.partie1;

public class FSFactoryRepertoire extends ComposantImpl {

}
