package td2.partie1;

public class Owner {
    private String name;
    public Owner(String name) {
        this.name = name;
    }
}
